<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maa_authenticate"
        style="@style/TextColorBlack"
        android:background="#F0F0F0"
        android:paddingTop="17.3dp"
        android:paddingLeft="18.6dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BackgroundColor"
        android:text="@string/maa_tip"
        android:textSize="13sp"
        android:textColor="#cacaca"
        android:paddingTop="11.6dp"
        android:paddingLeft="18.6dp"
        android:paddingBottom="19.3dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="11.6dp"
        android:layout_marginLeft="11.3dp"
        android:layout_marginRight="11.3dp"
        style="@style/BackgroundColor">
        <TextView
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:text="@string/maa_phone_id"
            android:paddingLeft="21dp" />

        <EditText
            android:id="@+id/phone_num"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/maa_num_hint"
            android:textColorHint="#dadada"
            android:background="@null"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="11.6dp"
        android:layout_marginLeft="11.3dp"
        android:layout_marginRight="11.3dp"
        >
        <TextView
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/maa_au_num"
            android:gravity="center_vertical"
            android:paddingLeft="17.3dp"
            style="@style/BackgroundColor"/>
        <EditText
            android:id="@+id/input_authentication_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/maa_au_num_hint"
            android:layout_marginRight="9dp"
            android:textColorHint="#dadada"
            style="@style/BackgroundColor"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/get_authentication_code"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/maa_au_num_get"
            android:textSize="16sp"
            android:textColor="#7b7b7b"
            style="@style/BackgroundColor"/>
    </LinearLayout>
    <TextView
        android:enabled="false"
        android:id="@+id/mal_log_in"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="11.6dp"
        android:layout_marginLeft="11.3dp"
        android:layout_marginRight="11.3dp"
        android:background="@mipmap/signin_backgroud"
        android:text="@string/maa_sign_in"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#ffffff"/>
</LinearLayout>
