<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <FrameLayout
            android:id="@+id/Advanced_Options"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#F0F0F0">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/TextColorBlack"
                android:text="@string/upload_video_title"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/advanced_icon"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>
        </FrameLayout>

       <ImageView
           android:id="@+id/video_image"
           android:layout_below="@id/Advanced_Options"
           android:layout_width="match_parent"
           android:layout_height="150dp"
           android:layout_marginTop="10dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:scaleType="fitXY"
           android:src="@drawable/billboard_photos"/>
       
        <View
           android:id="@+id/line_view"
           android:layout_below="@id/video_image"
           android:layout_width="match_parent"
           android:layout_height="0.1dp"
           android:layout_marginTop="10dp"
           android:background="#dbdbdb" />
       
       <LinearLayout
           android:id="@+id/price_layout" 
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:layout_below="@id/line_view"
           android:layout_marginTop="10dp"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:orientation="horizontal">
           
           <TextView
               android:id="@+id/minute_price"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="40dp"
               android:gravity="center"
               android:text="@string/minute_price"
               android:textSize="16sp"
               android:layout_gravity="center_vertical"/>
           
           <TextView
               android:id="@+id/total_price"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="30dp"
               android:gravity="center"
               android:text="@string/total_price"
               android:textSize="16sp"
               android:layout_gravity="center_vertical"/>
       </LinearLayout>
       
       <LinearLayout
           android:id="@+id/playtime_layout"
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:layout_below="@id/price_layout"
           android:layout_marginTop="10dp"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:orientation="horizontal"
           android:focusable="true"  
           android:focusableInTouchMode="true"
           style="@style/BackgroundColor">
           
           <TextView
               android:id="@+id/start_time"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="15dp"
               android:gravity="center"
               android:text="@string/start_time"
               android:textSize="16sp"
               android:layout_gravity="center_vertical"/>

               <EditText
               android:id="@+id/edit_startTime"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@null"
               android:gravity="right"
               android:hint="@string/edit_startTime"
               android:paddingLeft="10dp"
               android:textColorHint="#dadada"
               android:layout_gravity="center_vertical"/>
   
       </LinearLayout>
      
       <LinearLayout 
           android:id="@+id/video_layout"
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:layout_below="@id/playtime_layout"
           android:layout_marginTop="10dp"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:focusable="true"  
           android:focusableInTouchMode="true"
           android:orientation="horizontal"
           >
           
           <EditText
               android:id="@+id/upload_video"
               android:layout_width="140dp"
               android:layout_height="match_parent"
               android:paddingLeft="15dp"
               android:layout_weight="2"              
               android:singleLine="true"
               android:hint="@string/upload_video"
               style="@style/BackgroundColor" />
           
            <Button 
                android:id="@+id/rename_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/rename_video"
                style="@style/BackgroundColor"/>
            
            <Button
                android:id="@+id/delete_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/delete_video" 
                style="@style/BackgroundColor"/>  
       </LinearLayout>
       
        <LinearLayout 
            android:id="@+id/select_playtime_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/video_layout"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:focusable="true"  
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            style="@style/BackgroundColor">
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playback_length"
                android:layout_marginLeft="15dp"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"/>
            
            <EditText 
                android:id="@+id/play_default_time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:background="@null"
                android:hint="@string/play_default_time"
                android:gravity="right"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/select_playtimes_layout" 
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/select_playtime_layout"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:focusable="true"  
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            style="@style/BackgroundColor">
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_times"
                android:layout_marginLeft="15dp"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"/>
            
            <EditText 
                android:id="@+id/play_default_times"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:background="@null"
                android:hint="@string/play_default_times"
                android:gravity="right"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
       
       <TextView
           android:id="@+id/confirm"
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:text="@string/ok"
           android:textSize="16sp"
           android:layout_alignParentBottom="true"
           android:gravity="center"
           android:layout_marginLeft="15dp"
           android:layout_marginBottom="15dp"/>
       
       <TextView
           android:id="@+id/cancle"
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:text="@string/cancle"
           android:textSize="16sp"
           android:layout_alignParentBottom="true"
           android:layout_alignParentRight="true"
           android:gravity="center"
           android:layout_marginRight="15dp"
           android:layout_marginBottom="15dp"/>    
</RelativeLayout>
