<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F0F0F0"
        style="@style/TextColorBlack"
        android:text="@string/abdi_title"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="162.6dp"
        android:paddingLeft="0dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ad_de_icon"
            android:layout_marginTop="12dp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ad_board_model_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="@string/abdi_model"
                    android:textColor="#929292"
                    android:maxLines="2"
                    android:layout_marginRight="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/price_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/main_dialog_price"
                    android:textColor="#929292"
                    android:maxLines="2"
                    android:layout_marginRight="20dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/abdi_publish"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@mipmap/main_dialog_publish"
                android:text="@string/main_dialog_publish"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="#ffffff"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42.3dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/main_dialog_location"
            android:layout_marginLeft="11.6dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/main_dialog_location"
            android:textSize="14sp"
            android:textColor="#7b7b7b"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42.3dp"
        android:layout_marginTop="0dp"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/telephone_icon"
            android:layout_marginLeft="11.6dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/abdi_telephone"
            android:textSize="14sp"
            android:textColor="#7b7b7b"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="42.3dp"
        android:background="#7b7b7b"
        android:textSize="17sp"
        android:text="@string/abdi_apparatus_detail_title"
        android:paddingLeft="18dp"
        android:gravity="center_vertical"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:gravity="right">
        <TextView
            android:id="@+id/adbi_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/adbi_cancel"
            android:gravity="center_vertical"
            android:textSize="17sp"
            android:textColor="#7b7b7b"
            android:layout_marginRight="23dp"/>
    </LinearLayout>
</LinearLayout>
