<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

       <TextView
            android:id="@+id/my_order"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#F0F0F0"
            style="@style/TextColorBlack"
            android:text="@string/my_order"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"/>

       <ImageView
           android:id="@+id/video_image"
           android:layout_below="@id/Advanced_Options"
           android:layout_width="match_parent"
           android:layout_height="150dp"
           android:layout_marginTop="10dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:scaleType="fitXY"
           android:src="@drawable/billboard_photos"/>
       
        <View
           android:id="@+id/line_view"
           android:layout_below="@id/video_image"
           android:layout_width="match_parent"
           android:layout_height="0.1dp"
           android:layout_marginTop="10dp"
           android:background="#dbdbdb" />

       <LinearLayout 
           android:id="@+id/video_layout"
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:layout_below="@id/line_view"
           android:layout_marginTop="40dp"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:focusable="true"  
           android:focusableInTouchMode="true"
           android:orientation="horizontal"
           >
           
           <EditText
               android:id="@+id/upload_video"
               android:layout_width="140dp"
               android:layout_height="match_parent"
               android:paddingLeft="15dp"
               android:layout_weight="2"              
               android:singleLine="true"
               android:hint="@string/upload_video"
               style="@style/BackgroundColor" />
           
            <Button 
                android:id="@+id/rename_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/rename_video"
                style="@style/BackgroundColor"/>
            
            <Button
                android:id="@+id/delete_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/delete_video" 
                style="@style/BackgroundColor"/>  
       </LinearLayout>
       
        <TextView
          android:id="@+id/Play_countdown_text"
          android:layout_below="@id/video_layout"
          android:layout_marginTop="40dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:text="播放倒计时30分钟"
          android:textSize="16sp" />
       
       <TextView
           android:id="@+id/confirm"
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:text="@string/ok"
           android:textSize="16sp"
           android:layout_alignParentBottom="true"
           android:gravity="center"
           android:layout_marginLeft="15dp"
           android:layout_marginBottom="15dp"/>
       
       <TextView
           android:id="@+id/cancle"
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:text="@string/cancle"
           android:textSize="16sp"
           android:layout_alignParentBottom="true"
           android:layout_alignParentRight="true"
           android:gravity="center"
           android:layout_marginRight="15dp"
           android:layout_marginBottom="15dp"/>    
</RelativeLayout>
